--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "carbon-tutorial",
   "version": "0.0.0",
+  "engines": {
+    "node": "12.18.0"
+  },
   "private": true,
   "repository": "git@github.com:carbon-design-system/carbon-tutorial.git",
   "bugs": "https://github.com/carbon-design-system/carbon-tutorial/issues",
   "license": "Apache-2.0",
   "scripts": {
     "build": "react-scripts build",
-    "ci-check": "yarn format:diff",
+    "ci-check": "yarn format:diff && yarn test",
     "clean": "yarn cache clean && yarn install",
     "eject": "react-scripts eject",
     "format": "prettier --write \"**/*.{js,md,scss}\"",
@@ -17,8 +20,6 @@
     "test": "react-scripts test"
   },
   "dependencies": {
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
@@ -28,7 +29,7 @@
     "@commitlint/config-conventional": "^7.5.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.11.0",
     "prettier": "^1.17.0"
   },
   "eslintConfig": {
